{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 41,
  "lineage": "8fc6f69d-29ff-620e-a5f4-359331bf9eed",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009b0cde183d506a8",
            "association_id": "eipassoc-0a2c0be6973534bf6",
            "domain": "vpc",
            "id": "eipalloc-009b0cde183d506a8",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-08d1d695a4c6b0a74",
            "private_dns": "ip-10-0-1-57.ca-central-1.compute.internal",
            "private_ip": "10.0.1.57",
            "public_dns": "ec2-3-97-160-64.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.97.160.64",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public",
              "Owner": "Group-B"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430941090394a64d",
            "arn": "arn:aws:ec2:ca-central-1:729780141868:instance/i-0093bb605c36da2a0",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0093bb605c36da2a0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tier-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-037831f6ff771687d",
            "private_dns": "ip-10-0-2-62.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-062a732782001d44b",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cd937d1d74908ff6",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private-ec2",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private-ec2",
              "Owner": "Group-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0895898aff4438672"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.tier",
            "aws_security_group.ssh",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_region.current",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0430941090394a64d",
            "arn": "arn:aws:ec2:ca-central-1:729780141868:instance/i-05a770f50b8798f54",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05a770f50b8798f54",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tier-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08c3f7c189ebe7d37",
            "private_dns": "ip-10-0-1-14.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.14",
            "public_dns": "ec2-15-223-122-211.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.223.122.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08b1ae0b28f94f1ab",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c5710da6b24ec8b",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public-ec2",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public-ec2",
              "Owner": "Group-B"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0895898aff4438672"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.tier",
            "aws_security_group.ssh",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_region.current",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:internet-gateway/igw-0b83a9daa7830803c",
            "id": "igw-0b83a9daa7830803c",
            "owner_id": "729780141868",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-main",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-main",
              "Owner": "Group-B"
            },
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-009b0cde183d506a8",
            "association_id": "eipassoc-0a2c0be6973534bf6",
            "connectivity_type": "public",
            "id": "nat-0e8dce43b13773e16",
            "network_interface_id": "eni-08d1d695a4c6b0a74",
            "private_ip": "10.0.1.57",
            "public_ip": "3.97.160.64",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09c5710da6b24ec8b",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public-a",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public-a",
              "Owner": "Group-B"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:network-acl/acl-0d38e496782675b56",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0d38e496782675b56",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.1.0/24",
                "from_port": 8080,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 8080
              }
            ],
            "owner_id": "729780141868",
            "subnet_ids": [
              "subnet-0cd937d1d74908ff6"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:network-acl/acl-05694b826031003f1",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-05694b826031003f1",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "729780141868",
            "subnet_ids": [
              "subnet-09c5710da6b24ec8b"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private-internet_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09e29aeedfeb6f5471080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e8dce43b13773e16",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09e29aeedfeb6f547",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.public",
            "aws_nat_gateway.public",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b83a9daa7830803c",
            "id": "r-rtb-0048be883c29157651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0048be883c2915765",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:route-table/rtb-09e29aeedfeb6f547",
            "id": "rtb-09e29aeedfeb6f547",
            "owner_id": "729780141868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e8dce43b13773e16",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private",
              "Owner": "Group-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:route-table/rtb-0048be883c2915765",
            "id": "rtb-0048be883c2915765",
            "owner_id": "729780141868",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b83a9daa7830803c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public",
              "Owner": "Group-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-007688954f13a6c8c",
            "route_table_id": "rtb-09e29aeedfeb6f547",
            "subnet_id": "subnet-0cd937d1d74908ff6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08946217c67c905d5",
            "route_table_id": "rtb-0048be883c2915765",
            "subnet_id": "subnet-09c5710da6b24ec8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:security-group/sg-07f2ee517b5c0d3fd",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f2ee517b5c0d3fd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05401ac085f34247f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250519190453160500000003",
            "name_prefix": "terraform-",
            "owner_id": "729780141868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-ec2-sg",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-ec2-sg",
              "Owner": "Group-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.rds",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:security-group/sg-05401ac085f34247f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05401ac085f34247f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.2.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250519190448399800000001",
            "name_prefix": "terraform-",
            "owner_id": "729780141868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-rds-sg",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-rds-sg",
              "Owner": "Group-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:security-group/sg-0895898aff4438672",
            "description": "allow ssh to ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0895898aff4438672",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "groupB_access",
            "name_prefix": "",
            "owner_id": "729780141868",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-ec2-sg",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-ec2-sg",
              "Owner": "Group-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:subnet/subnet-0cd937d1d74908ff6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cd937d1d74908ff6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729780141868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private",
              "Owner": "Group-B"
            },
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:subnet/subnet-047762b47f8e425f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047762b47f8e425f4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "729780141868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-private",
              "Owner": "Group-B"
            },
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:subnet/subnet-09c5710da6b24ec8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c5710da6b24ec8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "729780141868",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-public",
              "Owner": "Group-B"
            },
            "vpc_id": "vpc-06b194053350cfbc9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:729780141868:vpc/vpc-06b194053350cfbc9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0691474a584831aca",
            "default_route_table_id": "rtb-0a0ff469378326bf1",
            "default_security_group_id": "sg-097dd2348f01c7034",
            "dhcp_options_id": "dopt-04adbfacfc0ac0c6e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06b194053350cfbc9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a0ff469378326bf1",
            "owner_id": "729780141868",
            "tags": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-vpc",
              "Owner": "Group-B"
            },
            "tags_all": {
              "Environment": "Staging",
              "Managed_by": "Terraform",
              "Name": "GroupB-vpc",
              "Owner": "Group-B"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}